# on-call-agent

./: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.backend  GEMINI.md  README.md  TODO.md  docker-compose.yml  run-api.ps1  run-dev.ps1  run-ui.ps1  spec.md
.specify/: init-options.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.superpowers/brainstorm/session-1/: .server-info
app/: braintrust_integration.py  gemini_client.py  graph.py  main.py  mock_data.py  telemetry.py
app/agents/: comms.py  pir.py  summary.py
backend/: .dockerignore  .env.template  Dockerfile  pyproject.toml
backend/app/: braintrust_integration.py  gemini_client.py  graph.py  llm_client.py  main.py  schemas.py
backend/app/agents/: comms.py  pir.py  summary.py  triage.py
backend/specs/001-on-call-copilot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
backend/specs/001-on-call-copilot/contracts/: api-v1.md
backend/tests/: conftest.py  test_agents.py  test_evals.py
docs/superpowers/plans/: 2026-03-15-neumorphic-ui-refresh.md  2026-03-15-podman-support.md  2026-03-16-observability-refactor-plan.md
docs/superpowers/specs/: 2026-03-15-neumorphic-ui-design.md  2026-03-15-on-call-copilot-ui-design.md  spec.md  (+2 more)
frontend/: Dockerfile  pnpm-lock.yaml  vite.config.ts
frontend/src/: .mockup.html  App.tsx  index.css
scripts/: invoke.py  run_scenarios.py
scripts/scenarios/: sev1_checkout_latency.json
specs/001-on-call-copilot/: plan.md  quickstart.md  research.md  spec.md
tests/: test_evals.py
(+9 files in other folders)
